--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "create-svelte-docs-theme",
-  "version": "0.0.3",
+  "version": "0.0.4",
   "description": "",
   "files": [
     "index.js",
@@ -10,7 +10,7 @@
     "node": ">=17"
   },
   "bin": {
-    "create-svelte-docs-theme": "./index.js"
+    "create-svelte-docs-theme": "index.js"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
